--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -572,6 +572,13 @@
       background-color: $nd-color-basic-light;
     }
 
+    &.is-flipped {
+      top: auto;
+      bottom: 100%;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
     #{$b}.is-active & {
       opacity: 1;
       pointer-events: auto;
