--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -137,6 +137,12 @@
     }
   }
 
+  &:disabled, &.is-disabled {
+    border-color: $nd-color-field-border;
+    color: $nd-color-field-border;
+    pointer-events: none;
+  }
+
   &_date {
     background-image: $icon-input-calendar;
     background-repeat: no-repeat;
