--- a/app/blocks/header-user/nd-header-user.pug
+++ b/app/blocks/header-user/nd-header-user.pug
@@ -1,10 +1,14 @@
 mixin nd-header-user(host)
   +b.nd-header-user.header-user__&attributes(attributes)
     - var newMessages = host ? true : false
-    if host
+    if (host != 'manager' && host)
       +e.user_host
         +nd-short-profile-origin('assets/images/nd/user-avatar-1.jpg', 'Marge Landlordy', 'a')._login._login_host(href="#")
           +e.status host
+    else if (host == 'manager')
+      +e.user_manager
+        +nd-short-profile-origin('assets/images/nd/user-avatar-1.jpg', 'Marge Landlordy', 'a')._login._login_host(href="#")
+          +e.status_manager Manager
     else
       +e.user
         +nd-short-profile-origin('assets/images/nd/user-avatar-1.jpg', 'Marge Landlordy', 'a')._login(href="#")
@@ -32,7 +36,9 @@ mixin nd-header-user(host)
       +e.LI.item
         +nd-user-link('', '')(href="#")
           if host
-            +icon('nd-building').icon_building
+            +e.SVG.icon_building(viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg")
+              path(d="M12.4514 1.57629C12.5486 1.57629 12.6459 1.57629 12.7432 1.67481L23.249 11.7237C23.3463 11.8222 23.3463 11.9207 23.3463 12.0192V21.9696C23.3463 22.2651 23.1518 22.4622 22.8599 22.4622H2.0428C1.75097 22.4622 1.55642 22.2651 1.55642 21.9696V12.0192C1.55642 11.9207 1.6537 11.7237 1.6537 11.7237L12.1595 1.67481C12.2568 1.57629 12.4514 1.57629 12.4514 1.57629ZM12.4514 0C11.965 0 11.4786 0.197037 11.0895 0.59111L0.583658 10.5415C0.194553 10.9355 0 11.5266 0 12.0192V21.9696C0 23.0533 0.875486 24.0385 2.0428 24.0385H22.9572C24.0272 24.0385 25 23.1518 25 21.9696V12.0192C25 11.4281 24.8054 10.9355 24.4163 10.5415L13.9105 0.59111C13.5214 0.197037 13.035 0 12.4514 0Z" fill="black")
+              path(d="M4.37782 17.0436C3.98871 17.0436 3.59961 16.6496 3.59961 16.2555V12.7088L6.61517 9.65477C6.907 9.35922 7.39338 9.35922 7.68521 9.65477C7.97704 9.95033 7.97704 10.4429 7.68521 10.7385L5.05875 13.3985V16.354C5.15603 16.7481 4.8642 17.0436 4.37782 17.0436Z" fill="#0085FF")
           else
             +e.SVG.icon_heart(viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg")
               path(d="M8.03276 1.47636C9.50428 1.47636 10.9383 1.9654 12.0818 2.84198L13.0097 3.55248L13.9376 2.84198C15.0811 1.95617 16.5151 1.47636 17.9866 1.47636C19.7393 1.47636 21.3796 2.14072 22.6074 3.34948C25.1568 5.85928 25.1568 9.95617 22.6074 12.466L13.0003 21.9146L3.412 12.466C2.1748 11.2572 1.49996 9.63322 1.49996 7.90773C1.49996 6.18224 2.1748 4.55825 3.412 3.34948C4.63983 2.14072 6.28006 1.47636 8.03276 1.47636ZM17.9772 0C16.2152 0 14.4531 0.56286 13.0097 1.67935C11.5475 0.56286 9.79484 0 8.03276 0C5.97076 0 3.90875 0.765859 2.35288 2.30681C-0.777619 5.3887 -0.777619 10.4268 2.35288 13.5087L13.0097 24L23.6665 13.5087C26.797 10.4268 26.797 5.3887 23.6665 2.30681C22.0919 0.765859 20.0299 0 17.9772 0Z" fill="black")
