--- a/app/blocks/logo/nd-logo.scss
+++ b/app/blocks/logo/nd-logo.scss
@@ -38,6 +38,7 @@
   &_footer {
     width: 182px;
     height: 37px;
+    transition: color $ease-main;
 
     @include screen('xlg', max, 2) {
       width: pxtovw(182, 1660);
@@ -57,6 +58,10 @@
     @include screen('sm', max, 2) {
       width: pxtovw(150, 375);
       height: pxtovw(31, 375);
+    }
+
+    &:hover {
+      color: $nd-color-main;
     }
   }
 
