--- a/app/blocks/short-profile/short-profile.scss
+++ b/app/blocks/short-profile/short-profile.scss
@@ -396,6 +396,17 @@
           height: pxtovw(2, 960);
         }
       }
+
+      &_manager {
+        text-transform: none;
+        background-color: $nd-color-main;
+        margin-bottom: 0;
+        font-weight: 700;
+
+        &::after {
+          display: none;
+        }
+      }
     }
   }
 
