--- a/app/blocks/switch/nd-switch.scss
+++ b/app/blocks/switch/nd-switch.scss
@@ -94,7 +94,7 @@
       }
 
       &:hover {
-        border-color: $nd-color-main;
+        border-color: $nd-color-field-border-hover;
       }
     }
 
@@ -197,6 +197,10 @@
           width: pxtovw(21, 375);
           height: pxtovw(21, 375);
         }
+      }
+
+      #{$b}_light:hover & {
+        background-color: $nd-color-field-border-hover;
       }
 
       #{$b}_light #{$b}__input:checked ~ & {
