--- a/app/components/footer/nd-footer.pug
+++ b/app/components/footer/nd-footer.pug
@@ -17,7 +17,7 @@ mixin nd-footer()
           +e.list_columns
             each item in getData('footer-location.json')
               +nd-link().__link_sm-fz13._sm-lh26(href=item.href)!=item.name
-          +nd-link-icon('nd-burger')._underline.__location Show all <span class="nd-hide-md">locations</span>
+          +nd-link-icon('nd-burger')._underline._underline_hovertoo.__location Show all <span class="nd-hide-md">locations</span>
       +e.bottom
         +e.company
           +nd-logo._footer.__logo(href="/")
