--- a/app/components/search-panel/search-panel.scss
+++ b/app/components/search-panel/search-panel.scss
@@ -193,7 +193,7 @@
     flex: 1;
     cursor: pointer;
     vertical-align: middle;
-    transition: border $ease-main;
+    transition: border $ease-main, transform $ease-main;
 
     @include screen('xlg', max, 2) {
       height: pxtovw(40, 1660);
@@ -260,11 +260,15 @@
     }
 
     &:hover {
-      border-color: $nd-color-basic;
+      border-color: $nd-color-field-border-hover;
 
       @include screen('sm', max, 2) {
-        border-color: $nd-color-border;
+        border-color: $nd-color-field-border-hover;
       }
+    }
+
+    &:active {
+      transform: scale(.96);
     }
   }
 
