--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -4,10 +4,10 @@ block head
   - var pageTitle = 'Spacepool - New Sitemap'
 
 block header
-  - var headerClass = ''
+  - var headerClass = ' is-login'
   - var isNoUser = true
   - var isMap = false
-  - var host = false
+  - var host = 'manager'
   - var pageClass = ' nd-page_main'
 
 block content
