--- a/app/blocks/burger/burger.pug
+++ b/app/blocks/burger/burger.pug
@@ -11,4 +11,7 @@ mixin nd-burger()
 mixin nd-burger-icon()
   +b.BUTTON.nd-burger.js-open-navigation&attributes(attributes)
     +e.icon
-      +icon('nd-menu-burger')
+      +e.SVG(viewBox="0 0 32 27" fill="none" xmlns="http://www.w3.org/2000/svg")
+        +e.PATH.border_top(d="M1 1L31 1" stroke-width="2" stroke-linecap="round")
+        +e.PATH.border_mid(d="M8 13L31 13" stroke-width="2" stroke-linecap="round")
+        +e.PATH.border_bottom(d="M2 26L31 26" stroke-width="2" stroke-linecap="round")
