partly filter js

--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -514,6 +514,12 @@
     }
   }
 
+  &_sm-h32 {
+    @include screen('sm', max, 2) {
+      height: pxtovw(32, 375);
+    }
+  }
+
   &_border {
     box-sizing: border-box;
     border: 1px solid $nd-color-border;
