--- a/app/blocks/filter-tags/filter-tags.pug
+++ b/app/blocks/filter-tags/filter-tags.pug
@@ -1,4 +1,3 @@
 mixin filter-tags()
-  +b.js-filter-tag-slider.filter-tags__&attributes(attributes)
-    +e.wrapper.swiper-wrapper(data-nd-filter-tags)
-      block
+  +b.filter-tags__&attributes(attributes)(data-nd-filter-tags)
+    block
