--- a/app/blocks/scroll-form/scroll-form-v3.pug
+++ b/app/blocks/scroll-form/scroll-form-v3.pug
@@ -17,7 +17,6 @@ mixin scroll-form-v3()
         +offer-select-item(item)
     +nd-input-number({ name: 'count', value: 1 }).__counter
     +e.buttons
-      +nd-button('a')(href="#reservation-request" data-rr-wrapper-target="scrollForm" data-rr-need-to-show="true").__button Request reservation
+      +nd-button('a')(href="#").__button Request reservation
       +nd-button('a')._black.__button Arrange viewing
     +e.note prices are exclusive of VAT
-    +e.panel(data-rr-wrapper-block="scrollForm")
